# bareunpy

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
bareunpy/: __init__.py  _corrector.py  _custom_dict.py  _custom_dict_client.py  _lang_service_client.py  _revision_service_client.py  _tagger.py  _tokenizer.py  _version.py
tests/: test_tagger.py  test_tokenizer.py
